--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/99d0019b2f.js" crossorigin="anonymous"></script>
+<meta name="google-site-verification" content="aaZxxwrPTX7dBOkJkZyRD6EU6W3CrN6hrQL-uqYMogE" />
 </head>
 <body>
     <section class="header">
@@ -134,11 +135,12 @@
             </div>
             <div class="contact-col">
 
-                <form data-netlify="true" method="post">
+                <form data-netlify="true" data-netlify-recaptcha="true" method="post">
                     <input type="text" name="name" placeholder="Imię i Nazwisko" required>
                     <input type="email" name="email" placeholder="E-mail" required>
                     <input type="text" name="subject" placeholder="Temat Wiadomości" required>
                     <textarea rows="8" name="message" placeholder="Treść Wiadomości" required></textarea>
+                    <div data-netlify-recaptcha="true"></div>
                     <button type="submit" class="hero-btn red-btn">Wyślij Wiadomość</button>
                 </form>
 
